# gun-weapon-detection-neural-network

./: LICENSE  README.md
src/: CMakeLists.txt  tester_gun.cpp  trainer_gun.cpp
